# easigrow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE
src/: beta.rs  cycle.rs  dadn.rs  description.md  factors.rs  fracto.rs  io.rs  lib.rs  list.rs  main.rs  material.rs  numbers.rs  tag.rs  vector.rs
src/grow/: easigrow.rs  mod.rs  stress_constraint.rs  willenborg.rs
src/optimise/: gsl.rs  mod.rs  nelder.rs  particle_swarm.rs  sweep.rs
src/options/: clap.rs  mod.rs
src/options/builder/: dadn.rs  grow.rs  mod.rs  optimise.rs
src/plastic/: mod.rs
src/table/: bspline.rs  cubic_spline.rs  gsl.rs  mod.rs
